Bug 1876895 - WebRTC backport: Video capture PipeWire: add support for DMABuf buffer type r=pehrsons,webrtc-reviewers

This is a simple backport of an WebRTC upstream change.

Upstream commit: 334e9133dcdecb5d00d991332e05c7b80ae26578

Differential Revision: https://phabricator.services.mozilla.com/D202929